--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,8 @@
 /DonatoZacharyP01.ged
 /DonatoZacharyP02.zip
-/output.txt
 /ProjectFileReader$1.class
 /ProjectFileReader.class
+/output.txt
+/Record.class
+/Individual.class
+/Family.class
